add DELETE to API , make validators nicer
