# openapi/people.yaml
@@ -26,6 +26,22 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '404':
           description: Person not found.
+    delete:
+      operationId: deletePerson
+      parameters:
+        - name: personId
+          in: path
+          schema:
+            type: string
+            x-scala-type: org.robmaksoftware.domain.PersonId
+          required: true
+      responses:
+        '200':
+          description: person deleted
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          description: Person not found.
 
   /people/api/all:
     get:
